Fix username link clicking area
We don’t want the 2-pixels extra space around the text to be clickable,
but only the text itself.

Refs #581.

--- a/app/webroot/css/layouts/elements.css
+++ b/app/webroot/css/layouts/elements.css
@@ -869,7 +869,7 @@
     display: inline-block;
     vertical-align: middle;
     height: 16px;
-    padding: 2px;
+    margin: 2px;
     font-weight: bold;
 }
 
